Harden API contracts and sync backend flows